--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.animku">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".initial"
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:targetApi="Q">
-        <activity android:name=".GetAnime"/>
-        <activity android:name=".Fragment.MainFragment"/>
+        <activity android:name=".InfoAnime"></activity>
+        <activity android:name=".EpisodeAnime" />
+        <activity android:name=".GetAnime" />
+        <activity android:name=".Fragment.MainFragment" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
