Search view, videoplayer, bookmark, genre, ongoing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="Q">
-        <activity android:name=".InfoAnime"></activity>
+        <activity android:name=".VideoPlayer"></activity>
+        <activity android:name=".SearchAnime" />
+        <activity android:name=".InfoAnime" />
         <activity android:name=".EpisodeAnime" />
         <activity android:name=".GetAnime" />
         <activity android:name=".Fragment.MainFragment" />
